@@ -15,6 +15,9 @@
 10. When sorting favorites, don't sort genre, artist, album, or track lists.
 11. Fix playing an album from favourites by using the subtoolbar actions.
 12. Add volume step setting; 1%, 2%, 5%, or 10%
+13. Make 'show track number' in queue a config option of material, and not from
+    main LMS settings.
+14. Add 'show track number' for now playing.
 
 0.3.1
 -----
